--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "version": "1.0.0",
   "description": "Landing page for natours",
   "main": "index.js",
-  "scripts": {
-    "compile-scss": "node-sass sass/main.scss css/style.css -w"
-  },
+  "scripts": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/SanjayPJ/natours.git"
@@ -16,7 +14,7 @@
     "url": "https://github.com/SanjayPJ/natours/issues"
   },
   "homepage": "https://github.com/SanjayPJ/natours#readme",
-  "devDependencies": {
-    "node-sass": "^4.9.3"
+  "dependencies": {
+    "bootstrap": "^4.1.3"
   }
 }
